--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Lista de Tarefas</h1>
     </header>
     <nav>
+        <a href="serviços.html">Serviços</a>
         <a href="sobre.html">sobre</a>
     </nav>
     
